--- a/sockettest.html
+++ b/sockettest.html
@@ -6,12 +6,13 @@
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script>
-    var socket = io.connect('http://163.172.168.41:3000');
-    var name = "alice";
-    socket.emit('ping', (name) => {
-        socket.on('pong', reply);
-        console.log(reply);
-    });
+
+const
+    
+    ioClient = io.connect("http://163.172.168.41:8000");
+
+ioClient.on("seq-num", (msg) => console.info(msg));
+
 </script>
 
 <body>Hello world</body>
