--- a/sockettest.html
+++ b/sockettest.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello world</title>
+    <title></title>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script>
