Commit Server side + new Singing page

--- a/Genthresh.html
+++ b/Genthresh.html
@@ -21,11 +21,18 @@
 <div class="buttonbox">
 
     <div id="button1" >
-            <button onclick="window.location='generate.html'" class="emojibutton">&nbsp;✨ Generate
+            <button onclick="window.location='generate.html'" class="emojibutton">&nbsp;🔑 Generate
           </button>
     </div>
+
     <div id="button2" >
-        <button onclick="window.location='sign.html'" class="emojibutton">&nbsp;✍️ Sign
+      <button onclick="window.location='signsingle.html'" class="emojibutton">&nbsp;✍️ Sign
+        </button>
+  </div>
+
+
+    <div id="button2" >
+        <button onclick="window.location='sign.html'" class="emojibutton">&nbsp;👨‍👩‍👧‍👦 Group Sign
           </button>
     </div>
 
