--- a/generate.html
+++ b/generate.html
@@ -25,7 +25,7 @@
   <div class="buttonbox">
 
     <div id="button1">
-      <button onclick="generateNewKeypair()" class="emojibutton">&nbsp;✨ Generate Keypair
+      <button onclick="generateNewKeypair()" class="emojibutton">&nbsp;🔑 Generate Keypair
       </button>
     </div>
 
