Start Aggregate page, link home, add padding

--- a/Genthresh.html
+++ b/Genthresh.html
@@ -36,6 +36,11 @@
           </button>
     </div>
 
+    <div id="button2" >
+      <button onclick="window.location='aggregate.html'" class="emojibutton">&nbsp;💫 Aggregate
+        </button>
+  </div>
+
 </div>
 <body>
   <script src="js/scripts.js"></script>
