--- a/aggregate.html
+++ b/aggregate.html
@@ -12,7 +12,7 @@
 </head>
 <div class="titlebox">
     <div class="title">
-        Sign
+        Aggregate
     </div>
     <div class="emojititle">
         <a class="emojilink" href="Genthresh.html">🧙</a>
