--- a/generate.html
+++ b/generate.html
@@ -18,7 +18,7 @@
       Generate
     </div>
     <div class="emojititle">
-      🧙
+      <a class="emojilink" href="Genthresh.html">🧙</a>
     </div>
   </div>
 
@@ -174,4 +174,8 @@
     background-color: #cc70f3;
     color: white;
   }
+
+  .emojilink{
+        text-decoration: none;
+    }
 </style>
