Raw Elements for Group signing

--- a/Genthresh.html
+++ b/Genthresh.html
@@ -32,7 +32,7 @@
 
 
     <div id="button2" >
-        <button onclick="window.location='sign.html'" class="emojibutton">&nbsp;👨‍👩‍👧‍👦 Group Sign
+        <button onclick="window.location='groupsigncreate.html'" class="emojibutton">&nbsp;👨‍👩‍👧‍👦 Group Sign
           </button>
     </div>
 
@@ -40,6 +40,11 @@
       <button onclick="window.location='aggregate.html'" class="emojibutton">&nbsp;💫 Aggregate
         </button>
   </div>
+
+  <div id="button2" >
+    <button onclick="window.location='verify.html'" class="emojibutton">&nbsp;👀 Verify
+      </button>
+</div>
 
 </div>
 <body>
