--- a/verify.html
+++ b/verify.html
@@ -12,7 +12,7 @@
 </head>
 <div class="titlebox">
   <div class="title">
-    Sign
+    Verify
   </div>
   <div class="emojititle">
     🧙
@@ -85,6 +85,19 @@
       singleKey = myBundle.aggKey(keyArray)
       return singleKey
     }
+
+    var message = "This is a test message to sign"
+
+    var keypair1 = generateNewKeypair()
+    signature1 = signArbMessage(keypair1.privKey, message)
+
+    var keypair2 = generateNewKeypair()
+    signature2 = signArbMessage(keypair2.privKey, message)
+
+    aggerateSig = aggregateSignature([signature1, signature2])
+    aggregateKey = aggregateKeys([keypair1.pubKey, keypair2.pubKey])
+
+    answer = checkSignature(aggerateSig, aggregateKey, message)
 
   </script>
 
