Live Updating userlist

--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -262,7 +262,7 @@
         justify-content: center;
         position: relative;
         height: 2.5em;
-        max-width: 5em;
+        width: 10em;
         padding: 0.5em 0.75em;
         border-radius: 0.25em;
         box-sizing: border-box;
