Testing Materials and Aggregation design

--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -18,7 +18,7 @@
             Group Sign
         </div>
         <div class="emojititle">
-            🧙
+            <a class="emojilink" href="Genthresh.html">🧙</a>
         </div>
     </div>
 
@@ -279,5 +279,9 @@
     .joinedNames:hover {
         background-color: #12970b;
         color: white;
+    }
+
+    .emojilink{
+        text-decoration: none;
     }
 </style>
