--- a/Genthresh.html
+++ b/Genthresh.html
@@ -1,110 +1,114 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>GenThresh</title>
   <meta name="description" content="Generate Threshold Signatures">
   <meta name="Kee Jefferys" content="SitePoint">
 
 </head>
-<div class="titlebox">
-<div class="title">
-    GenThresh
-</div>
-<div class="emojititle">
-    🧙
-</div>
-</div>
 
-<div class="buttonbox">
-
-    <div id="button1" >
-            <button onclick="window.location='generate.html'" class="emojibutton">&nbsp;🔑 Generate
-          </button>
-    </div>
-
-    <div id="button2" >
-      <button onclick="window.location='signsingle.html'" class="emojibutton">&nbsp;✍️ Sign
-        </button>
-  </div>
-
-
-    <div id="button2" >
-        <button onclick="window.location='groupsigncreate.html'" class="emojibutton">&nbsp;👨‍👩‍👧‍👦 Group Sign
-          </button>
-    </div>
-
-    <div id="button2" >
-      <button onclick="window.location='aggregate.html'" class="emojibutton">&nbsp;💫 Aggregate
-        </button>
-  </div>
-
-  <div id="button2" >
-    <button onclick="window.location='verify.html'" class="emojibutton">&nbsp;👀 Verify
-      </button>
-</div>
-
-</div>
 <body>
-  <script src="js/scripts.js"></script>
+  <div class="titlebox">
+    <div class="title">
+      GenThresh
+    </div>
+    <div class="emojititle">
+      🧙
+    </div>
+  </div>
+
+  <div class="buttonbox">
+
+    <div id="button1">
+      <button onclick="window.location='generate.html'" class="emojibutton">&nbsp;🔑 Generate
+      </button>
+    </div>
+
+    <div id="button2">
+      <button onclick="window.location='signsingle.html'" class="emojibutton">&nbsp;✍️ Sign
+      </button>
+    </div>
+
+
+    <div id="button2">
+      <button onclick="window.location='groupsigncreate.html'" class="emojibutton">&nbsp;👨‍👩‍👧‍👦 Group Sign
+      </button>
+    </div>
+
+    <div id="button2">
+      <button onclick="window.location='aggregate.html'" class="emojibutton">&nbsp;💫 Aggregate
+      </button>
+    </div>
+
+    <div id="button2">
+      <button onclick="window.location='verify.html'" class="emojibutton">&nbsp;👀 Verify
+      </button>
+    </div>
+
+  </div>
+
 </body>
+
 </html>
 
 <style>
+  /* Add a black background color to the top navigation bar */
+  .emojititle {
+    font-size: 10vw;
+  }
 
-    /* Add a black background color to the top navigation bar */
-    .emojititle {
-      font-size: 10vw;
-    }
+  .title {
+    font-size: 5vw;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
 
-    .title{
-        font-size: 5vw;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: bold;
-    }
+  #button1,
+  #button2 {
+    display: inline-block;
+  }
 
-    #button1 , #button2 {
-    display:inline-block;
-    }
+  .buttonbox {
+    text-align: center;
+  }
 
-    .buttonbox{
-        text-align: center;
-    }
-    .titlebox{
-        text-align: center;
-        padding-bottom: 10px;
-    }
+  .titlebox {
+    text-align: center;
+    padding-bottom: 10px;
+  }
 
-    body {
-	 background-color: #fef2dc;
-}
- .emojibutton {
-	 font-size: 25px;
-	 font-family: 'Poppins', sans-serif;
-	 font-weight: 600;
-	 color: #fff;
-	 border: 0;
-	 outline: 0;
-	 display: flex;
-	 align-items: center;
-	 justify-content: center;
-	 position: relative;
-	 height: 2.5em;
-	 padding: 0.5em 0.75em;
-	 border-radius: 0.25em;
-	 box-sizing: border-box;
-	 background-color: #e0acf7;
-	 box-shadow: 0 0.15em 1em rgba(0, 0, 0, 0.2);
-	 z-index: 1;
-     transition-duration: 0.4s;
-     cursor: pointer;
-}
+  body {
+    background-color: #fef2dc;
+  }
 
-.emojibutton:hover {
-  background-color: #cc70f3;
-  color: white;
-}
-        
+  .emojibutton {
+    font-size: 25px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    color: #fff;
+    border: 0;
+    outline: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 2.5em;
+    padding: 0.5em 0.75em;
+    border-radius: 0.25em;
+    box-sizing: border-box;
+    background-color: #e0acf7;
+    box-shadow: 0 0.15em 1em rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .emojibutton:hover {
+    background-color: #cc70f3;
+    color: white;
+  }
 </style>
