--- a/aggregate.html
+++ b/aggregate.html
@@ -23,29 +23,41 @@
 <div class="buttonbox">
 
     <div id="button1">
-        <button onclick="getKeys()" class="emojibutton">&nbsp; ⬆️💾 Import Keys
-        </button>
+        <button onclick="sigAggregationButton()" class="emojibutton">&nbsp;✍ Aggregate Signatures</button>
     </div>
+
     <div id="button2">
-        <button onclick="signArbMessage()" class="emojibutton">&nbsp;✍️ Sign
-        </button>
-    </div>
-
-    <div class="keycontainer">
-
-        <div class="keys" id="pubKeyText">
-            Message
-        </div>
-        <div contenteditable="true" class="keysdisplay" placeholder="Test" id="messageContainer"></div>
-
-        <div class="keys" id="signatureText">
-            Signature
-        </div>
-        <div class="keysdisplay" id="signatureContainer"></div>
-
+        <button onclick="getKeys()" class="emojibutton">&nbsp;🔑 Aggregate Keys</button>
     </div>
 
 </div>
+
+<div class="keycontainer">
+
+    <div class="keys" id="signatureBanner">
+        Signatures
+    </div>
+    <div contenteditable="true" contenteditable
+        data-placeholder="Enter signatures separated by commas like: 89c969...e9bbbc,b5f8be...0ebb53"
+        class="keysdisplay" id="signatureContainer"></div>
+
+    <div class="keys" id="signatureBox">
+        Signature
+    </div>
+
+    <div class="keysdisplay" id="signatureContainer"></div>
+
+    <div class="keys" id="keyBanner">
+        Keys
+    </div>
+    <div contenteditable="true" class="keysdisplay" placeholder="Test" id="keyContainer"></div>
+
+    <div class="keys" id="signatureBox">
+        Signature
+    </div>
+
+</div>
+
 
 <body>
 
@@ -53,6 +65,14 @@
 
     <script>
 
+        function sigAggregationButton() {
+
+            document.getElementById("button1").innerHTML = "<button onclick=\"importFile()\" class=\"emojibutton\">&nbsp;⬆️💾 Import Signatures <span class=\"tooltiptext\">Accepts a .csv of raw signatures</span></button>"
+            document.getElementById("button2").innerHTML = "<button onclick=\"aggregateSignature()\" class=\"emojibutton\">&nbsp;💫 Aggregate Signatures</button>"
+            document.getElementById("signatureBanner").style.display = "block";
+            document.getElementById("signatureContainer").style.display = "block";
+
+        }
 
         function bufferToHex(buffer) {
             return [...new Uint8Array(buffer)]
@@ -60,24 +80,6 @@
                 .join("");
         }
 
-        function signArbMessage() {
-            messageObject = document.getElementById("messageContainer")
-            message = messageObject.innerText;
-
-            if (message == "") {
-
-                messageDisplay = document.getElementById("pubKeyText")
-                messageDisplay.innerHTML = "Please add a message"
-                return
-            }
-
-            messageDisplay = document.getElementById("pubKeyText")
-            messageDisplay.innerHTML = "Message"
-
-            privateKey = window.content
-            signature = myBundle.signMessage(privateKey, message)
-            displaySignature(signature)
-        };
 
         async function displaySignature(signature) {
 
@@ -91,7 +93,13 @@
         }
 
         function aggregateSignature(signatureArray) {
+
+            //Write logic to seperate and put signature into array
+
+
             agg = myBundle.aggSig(signatureArray)
+
+            //call function to unhide the display and show agg
             return agg
         }
 
@@ -100,7 +108,7 @@
             return singleKey
         }
 
-        function getKeys() {
+        function importFile() {
             var input = document.createElement('input');
             input.type = 'file';
 
@@ -115,11 +123,9 @@
                 // here we tell the reader what to do when it's done reading...
                 reader.onload = readerEvent => {
                     var content = readerEvent.target.result; // this is the content!
-                    window.content = content
-                }
+                    document.getElementById("signatureContainer").innerHTML = content 
 
-                var T = document.getElementById("button2");
-                T.style.display = "inline-block";
+                }
 
             }
 
@@ -170,7 +176,7 @@
     }
 
     #button2 {
-        display: none;
+        display: inline-block;
         padding-bottom: 30px;
     }
 
@@ -180,7 +186,7 @@
 
     .titlebox {
         text-align: center;
-        padding-bottom: 10px;
+        padding-bottom: 30px;
     }
 
     body {
@@ -211,6 +217,26 @@
         cursor: pointer;
     }
 
+
+    .emojibutton .tooltiptext {
+        visibility: hidden;
+        font-size: 18px;
+        background-color: #f7d596;
+        color:black;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 5px;
+        /* Position the tooltip */
+        position: absolute;
+        z-index: 1;
+        bottom: 100%;
+        
+    }
+
+    .emojibutton:hover .tooltiptext {
+        visibility: visible;
+    }
+
     .emojibutton:hover {
         background-color: #cc70f3;
         color: white;
@@ -229,28 +255,39 @@
         font-size: 25px;
         height: auto;
         min-height: 150px;
+        max-height: 300px;
         word-wrap: break-word;
         border-radius: 25px;
         border: 2px solid #8d7745;
+        overflow: hidden;
+        overflow-y: auto;
         padding: 20px;
-        
         text-align: left;
-
     }
 
-    #signatureContainer,
-    #signatureText {
+    #signatureBanner,
+    #signatureBox,
+    #keyBanner,
+    #keysBox,
+    #keyContainer,
+    #signatureContainer {
         display: none;
     }
-    #signatureText{
+
+    #signatureText {
         padding-top: 20px;
+    }
+
+    .keysdisplay:empty:before {
+        content: attr(data-placeholder);
+        color: grey;
     }
 
     .keycontainer {
         padding-bottom: 30px;
     }
 
-    .emojilink{
+    .emojilink {
         text-decoration: none;
     }
 </style>
